# ctf-challenges

./: README.md
picoctf-2017/tw1/: README.md
picoctf-2017/tw2/: README.md
picoctf-2017/tw3/: README.md
picoctf-2017/tw4/: README.md
plaidctf-2017/toaster-wars/: README.md
plaidctf-2020/back_to_the_future/: README.md
plaidctf-2023/poetry/problem/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  shell.nix
plaidctf-2023/poetry/problem/poetry/: __main__.py
plaidctf-2023/poetry/problem/poetry/assembly/: __init__.py  assembly_to_bytes.py  assembly_to_poem.py  parser.py
plaidctf-2023/poetry/problem/poetry/challenge/: __init__.py  astley_challenge.py  challenge.py  challenge_exception.py  limfib_challenge.py  wellerman_challenge.py
plaidctf-2023/poetry/problem/poetry/playground/: __init__.py
plaidctf-2023/poetry/problem/poetry/poetry/: __init__.py  dictionary.arpa  dictionary.py  eol.py  line.py  phoneme.py  poem.py  token.py  word.py
plaidctf-2023/poetry/problem/poetry/solver/: __init__.py
plaidctf-2023/poetry/problem/poetry/validation/: __init__.py  validate_poem.py  validation_exception.py
plaidctf-2023/the_other_css/solution/: .gitignore  pyproject.toml
plaidctf-2023/the_other_css/solution/attack/: __main__.py  _cache.py  _remote_player.py  attack_disk_key.py  dump_disk_content.py  get_possible_lfsr_keys.py  leak_auth_lfsr.py  unmangle_disk.py
plaidctf-2023/the_other_css/solution/attack/lfsr_bruter/: Cargo.toml
plaidctf-2023/the_other_css/solution/attack/lfsr_bruter/src/: main.rs
(+254 files in other folders)
