[package]
name = "lfsr_bruter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.7.0"
